# ghost

./: .clang-format  .gitignore  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
arduino/: CMakeLists.txt  PinChangeInt.h  car_interface.cpp  controller_interface.cpp  interrupt_pwm_signal.h  onboard_arduino.cpp  signal_map.h  simple_moving_average.h
arduino/controller_interface/: controller_interface.ino
bagfiles/: placeholder.txt
cfg/: Controller.cfg  LaneDetector.cfg
include/: car_odometry.h  car_odometry_ros.h
launch/: arduino_controller.launch  camera.launch  car_full.launch  car_interface.launch  car_minimal.launch  car_params.launch  controller.launch  ekf.launch  hardware.machine  imu.launch  lane_detector.launch  lane_detector_node.launch  odometry_integration.launch  state_publisher.launch  teleop_keyboard.launch
launch/camera/: camera.launch  export_frames_from_bag.launch  realsense_camera.launch
launch/camera/includes/: realsense.launch.xml
launch/includes/: robot_localization.launch.xml
launch/teleop/: teleop_keyboard.launch  teleop_ps3.launch
msg/: ArduinoControl.msg  ArduinoState.msg  CarControl.msg  CarControlStamped.msg  ControlState.msg  ServoControl.msg
param/: arduino_controller_params.yaml  car_params.yaml  chassis_params.yaml  ekf_params.yaml  ghost_controller.yaml  ghost_lane_detector.yaml  lane_detector_params.yaml  odometry_params.yaml
road_classifier/: TensorflowUtils.py  data_loader.py  fcn_model.py  model.py  parameters.py  run.py  test.py  train.py
road_classifier/datasets/: bad_label_scanner.py
road_classifier/label_generator/: label_generator.m
rviz/: ghost.rviz  rviz_ghost.launch
src/: camera_frame_grabber.cpp  car_command_converter.cpp  car_odometry.cpp  car_odometry_node.cpp  car_odometry_ros.cpp  car_to_servo_converter.cpp  cmd_car_to_twist.cpp  controller.cpp  lane_detector_node.cpp  lane_detector_nodelet.cpp  odometry_integration.cpp  teleop_keyboard.cpp  teleop_ps3.cpp
stage/: car.inc  example_track.world  stage_simulation.launch
test/: test_car_odometry.cpp
tracks/example_track/: example_track.yaml  example_track_centreline.txt
urdf/: ghost_car.urdf  ghost_car.urdf.xacro
utils/: camera_pose_estimation.py  map_from_odometry.py  odometry_calibration.py  odometry_plotter.py  racing_line_extractor.py
