<?xml version="1.0"?>
<package>
  <name>ghost</name>
  <version>0.0.0</version>
  <description>The Ghost package</description>

  <maintainer email="stevendaniluk8@gmail.com">Steven Daniluk</maintainer>
  <license>BSD</license>
  <author email="stevendaniluk8@gmail.com">Steven Daniluk</author>
  
  <!-- Build Tool Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Build Dependencies -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <!-- Run Time Dependencies -->
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  
</package>
