<?xml version="1.0"?>
<package>
  <name>ghost</name>
  <version>0.0.0</version>
  <description>The Ghost package</description>

  <maintainer email="stevendaniluk8@gmail.com">Steven Daniluk</maintainer>
  <license>BSD</license>
  <author email="stevendaniluk8@gmail.com">Steven Daniluk</author>
  
  <!-- Declaration of nodelet plugin -->
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
  
  <!-- Build Tool Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Build Dependencies -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <!-- Run Time Dependencies -->
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>imu_filter_madgwick</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>phidgets_imu</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>xacro</run_depend>
  
</package>
